Ajuste de estilo a home

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -208,10 +208,72 @@ header
   h4
     margin-top 15px
     color white
+#recommendation
+  .title
+    padding-bottom 40px
+    color #5d5d5d
+.box-default
+  padding 20px
+  .box-header
+    img
+      width 100%
+  .box-container
+    text-align center
+    h1
+      color #5d5d5d
+      font-weight 300
+      font-size 22px
+      margin 10px 0
+.parallax
+  perspective 1px
+  height 400px
+  overflow-x hidden
+  overflow-y auto
+  background #172031
+
+.parallax__layer
+  position absolute
+  top 0
+  right 0
+  bottom 0
+  left 0
+
+.parallax__layer--base
+  transform translateZ(0)
+  img
+    width 100% !important
+
+.parallax__layer--back
+  transform translateZ(-1px)
+  z-index 99999
+  .title
+    h1
+      font-size 65px
+      color #e6b52a
+      text-shadow 0 0 2px rgba(0,0,0, 0.5)
+    h3
+      font-size 56px
+      color #e6b52a
+      text-shadow 0 0 2px rgba(0,0,0, 0.5)
+  .contact
+    a
+      color white
+      font-size 45px
+  .social
+    text-align center
+    padding 60px 0
+    clear both
+    a
+      font-size 70px
+      color white
+      padding 0 25px
+  .content-contact
+    text-align center
+    padding 60px 0
 /************** footer area css ******************/
 
 #footer_area
-  background #444
+  background #172031
   padding 30px 0
   color #fff
 
