--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,24 +1,22 @@
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<!-- slider section -->
+<div class="carousel slide">
+
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="img/slide.jpg" alt="...">
-        </div>
-        <div class="item">
-            <img src="img/slide-2.jpg" alt="...">
-        </div>
+        <uib-carousel interval="5300" template-url="/templates/partials/slider-template.html">
+            <uib-slide ng-repeat="slide in Home.slider">
+                <div class="item">
+                    <a post-link="{ link: {url: slide.link, target: 'slide.target'} }"
+                       ui-sref="post_detail({slug: slide.slug})">
+                        <img post-image="{{ slide.urlImages.original }}" class="img-slide" alt="{{ slide.title }}">
+                    </a>
+                </div>
+            </uib-slide>
+        </uib-carousel>
     </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div>
+
+<!-- /slider section -->
 
 <section id="section-sports" class="section_padding">
     <div class="container">
@@ -57,7 +55,7 @@
         <div class="owl-carousel owl-theme">
             <div class="box-default">
                 <div class="box-header">
-                    <a href="#"> <img src="img/sujetador-deportivo1.jpg" alt=""/></a> 
+                    <a href="#"> <img src="img/sujetador-deportivo1.jpg" alt=""/></a>
                 </div>
                 <div class="box-container">
                     <h1>Sujetador Blue Mía</h1>
