--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -13,20 +13,21 @@
         <div class="row">
             <div class="col-md-12 content-pages">
                 <div class="container">
-                    <div class="col-sm-6 no-padding">
+                    <div class="col-sm-6 no-padding" ng-repeat=" sport in Post.list">
                         <div class="img-size wow slideInUp" data-wow-duration="2s">
-                            <a title="Leer más" post-link="{ link: {url: project.link, target: '_blank'} }"
-                               ui-sref="project_detail({slug: project.slug})">
-                                <img class="portfolio_img" post-image="{{ project.urlImages.original }}">
+                            <a title="Leer más" post-link="{ link: {url: sport.link, target: '_blank'} }"
+                               ui-sref="project_detail({slug: sport.slug})">
+                                <img class="portfolio_img" post-image="{{ sport.urlImages.medium }}">
+                                <h1>{{ sport.title }}</h1>
                             </a>
                         </div>
                     </div>
-                    <div class="col-sm-12" ng-show="project.busy">
+                    <div class="col-sm-12" ng-show="Post.busy">
                         <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
                     </div>
 
-                    <div class="col-sm-12" ng-show="!project.busy">
-                        <h2 class="text-center" ng-show="!project.list.length">Lo sentimos no contamos con contenido
+                    <div class="col-sm-12" ng-show="!Post.busy">
+                        <h2 class="text-center" ng-show="!Post.list.length">Lo sentimos no contamos con contenido
                             disponible</h2>
                     </div>
                 </div>
