--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -7,7 +7,7 @@
         </ol>
         <div class="row">
             <div class="col-md-12">
-                <h2 class="title">¿Cuál es tu deporte?</h2>
+                <h2 class="title">{{ Post.categoryName }}</h2>
             </div>
         </div>
         <div class="row">
