--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,21 +1,24 @@
-<!-- slider section -->
-<div class="carousel slide">
-
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-        <uib-carousel  template-url="/templates/partials/carousel.html">
-            <uib-slide ng-repeat="slide in Home.sliders">
-                <div class="item">
-                    <a post-link="{ link: {url: slide.link, target: 'slide.target'} }">
-                        <img post-image="{{ slide.urlImages.original }}" alt="{{ slide.title }}">
-                    </a>
-                </div>
-            </uib-slide>
-        </uib-carousel>
+        <div class="item active">
+            <img src="img/slide.jpg" alt="...">
+        </div>
+        <div class="item">
+            <img src="img/slide-2.jpg" alt="...">
+        </div>
     </div>
-</div>
 
-<!-- /slider section -->
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 
 <section id="section-sports" class="section_padding">
     <div class="container">
