--- a/app/templates/project_detail.html
+++ b/app/templates/project_detail.html
@@ -1,15 +1,90 @@
 <section id="content-area">
     <div class="container">
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-angle-left"></i> Home</a></li>
+            <li><a href="#">Library</a></li>
+            <li class="active">Data</li>
+        </ol>
         <div class="row">
-            <div class="col-md-12 text-center">
-                <h2 class="title">{{ project.detail.title }}</h2>
-                <hr class="divider"/>
+            <div class="col-md-12">
+                <h2 class="title">Crossfit</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12 content-pages">
+            <div class="content-pages">
                 <div class="container">
-                    <div ng-bind-html="project.detail.content"></div>
+                    <div class="col-sm-4 no-padding">
+                        <a href="#">
+                            <div class="box-default">
+                                <div class="box-header">
+                                    <img src="img/sujetador-deportivo1.jpg" alt=""/>
+                                </div>
+                                <div class="box-container">
+                                    <h1>Sujetador Blue Mía</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-4 no-padding">
+                        <a href="#">
+                            <div class="box-default">
+                                <div class="box-header">
+                                    <img src="img/sujetador-deportivo1.jpg" alt=""/>
+                                </div>
+                                <div class="box-container">
+                                    <h1>Sujetador Blue Mía</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-4 no-padding">
+                        <a href="#">
+                            <div class="box-default">
+                                <div class="box-header">
+                                    <img src="img/sujetador-deportivo1.jpg" alt=""/>
+                                </div>
+                                <div class="box-container">
+                                    <h1>Sujetador Blue Mía</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-4 no-padding">
+                        <a href="#">
+                            <div class="box-default">
+                                <div class="box-header">
+                                    <img src="img/sujetador-deportivo1.jpg" alt=""/>
+                                </div>
+                                <div class="box-container">
+                                    <h1>Sujetador Blue Mía</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-4 no-padding">
+                        <a href="#">
+                            <div class="box-default">
+                                <div class="box-header">
+                                    <img src="img/sujetador-deportivo1.jpg" alt=""/>
+                                </div>
+                                <div class="box-container">
+                                    <h1>Sujetador Blue Mía</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-4 no-padding">
+                        <a href="#">
+                            <div class="box-default">
+                                <div class="box-header">
+                                    <img src="img/sujetador-deportivo1.jpg" alt=""/>
+                                </div>
+                                <div class="box-container">
+                                    <h1>Sujetador Blue Mía</h1>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                     <div class="col-sm-12" ng-show="project.busy">
                         <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
                     </div>
