--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -182,7 +182,7 @@ header
   h2
     font-size 45px
     color #555
-    
+
 
 /************** content area default ****************/
 #content-area
@@ -196,7 +196,7 @@ header
     border: 1px solid #f5f5f5;
   .content-pages
     padding 20px 0
-    
+
 /************** Home area css ******************/
 
 #section-sports
@@ -212,8 +212,25 @@ header
   .title
     padding-bottom 40px
     color #5d5d5d
+.box-blog
+  padding-bottom 20px
+  border-bottom 1px solid #f5f5f5
+  a
+    color #5d5d5d
+    &:hover, &:focus
+      color white
+   color
 .box-default
   padding 20px
+  transition background-color 0.5s ease
+  h2
+    color #5d5d5d
+    padding 10px 0
+    font-size 24px
+  .comment-area
+    padding-bottom 10px
+    .comment, .date
+      color #5d5d5d
   .box-header
     img
       width 100%
@@ -224,6 +241,29 @@ header
       font-weight 300
       font-size 22px
       margin 10px 0
+  &:hover, &:focus
+    background #e50983
+    h1,h2
+      color white
+    .comment-area
+      .date, .comment
+        color white
+.widgets
+  margin-top 30px
+.box-sidebar
+  .box-header
+    background #5d5d5d
+    padding 10px
+    font-size 20px
+    text-align center
+    color white
+  .box-body
+    .list-group
+      boder-radius 0
+      .list-group-item:first-child
+        border-top-left-radius 0px
+        border-top-right-radius 0px
+
 .parallax
   perspective 1px
   height 400px
