--- a/app/css/main.css
+++ b/app/css/main.css
@@ -227,8 +227,33 @@ header .logo {
   padding-bottom: 40px;
   color: #5d5d5d;
 }
+.box-blog {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #f5f5f5;
+color
+}
+.box-blog a {
+  color: #5d5d5d;
+}
+.box-blog a:hover,
+.box-blog a:focus {
+  color: #fff;
+}
 .box-default {
   padding: 20px;
+  transition: background-color 0.5s ease;
+}
+.box-default h2 {
+  color: #5d5d5d;
+  padding: 10px 0;
+  font-size: 24px;
+}
+.box-default .comment-area {
+  padding-bottom: 10px;
+}
+.box-default .comment-area .comment,
+.box-default .comment-area .date {
+  color: #5d5d5d;
 }
 .box-default .box-header img {
   width: 100%;
@@ -241,6 +266,39 @@ header .logo {
   font-weight: 300;
   font-size: 22px;
   margin: 10px 0;
+}
+.box-default:hover,
+.box-default:focus {
+  background: #e50983;
+}
+.box-default:hover h1,
+.box-default:focus h1,
+.box-default:hover h2,
+.box-default:focus h2 {
+  color: #fff;
+}
+.box-default:hover .comment-area .date,
+.box-default:focus .comment-area .date,
+.box-default:hover .comment-area .comment,
+.box-default:focus .comment-area .comment {
+  color: #fff;
+}
+.widgets {
+  margin-top: 30px;
+}
+.box-sidebar .box-header {
+  background: #5d5d5d;
+  padding: 10px;
+  font-size: 20px;
+  text-align: center;
+  color: #fff;
+}
+.box-sidebar .box-body .list-group {
+  boder-radius: 0;
+}
+.box-sidebar .box-body .list-group .list-group-item:first-child {
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
 }
 .parallax {
   perspective: 1px;
