--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -7,7 +7,7 @@
         </ol>
         <div class="row">
             <div class="col-md-12">
-                <h2 class="title">{{ Post.categoryName }} lalla</h2>
+                <h2 class="title">{{ Post.categoryName }}</h2>
             </div>
         </div>
         <div class="row">
@@ -16,7 +16,7 @@
                     <div class="col-sm-6 no-padding" ng-repeat=" sport in Post.list">
                         <div class="img-size wow slideInUp" data-wow-duration="2s">
                             <a title="Leer más" post-link="{ link: {url: sport.link, target: '_blank'} }"
-                               ui-sref="post_detail({slug: sport.slug})">
+                               ui-sref="project_detail({slug: sport.slug})">
                                 <img class="portfolio_img" post-image="{{ sport.urlImages.medium }}">
                                 <h1>{{ sport.title }}</h1>
                             </a>
